website/versioned_docs/version-2.0.0-alpha.18/node-client.baseapiclient.md
---
id: version-2.0.0-alpha.18-node-client.baseapiclient
title: BaseAPIClient class
hide_title: true
original_id: node-client.baseapiclient
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## BaseAPIClient class


<b>Signature:</b>

```typescript
export declare abstract class BaseAPIClient 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)()](./node-client.baseapiclient._constructor_.md) |  | Constructs a new instance of the <code>BaseAPIClient</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [apiKey](./node-client.baseapiclient.apikey.md) |  | <code>string</code> |  |
|  [endpoint](./node-client.baseapiclient.endpoint.md) |  | <code>string</code> |  |
|  [fetchFunction](./node-client.baseapiclient.fetchfunction.md) |  | <code>typeof fetch</code> |  |
|  [getExtraSessionInfo](./node-client.baseapiclient.getextrasessioninfo.md) |  | <code>() =&gt; Promise&lt;JSONObject &#124; null&gt;</code> |  |
|  [refreshTokenFunction](./node-client.baseapiclient.refreshtokenfunction.md) |  | <code>() =&gt; Promise&lt;boolean&gt;</code> |  |
|  [requestClass](./node-client.baseapiclient.requestclass.md) |  | <code>typeof Request</code> |  |
|  [userAgent](./node-client.baseapiclient.useragent.md) |  | <code>string</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [activateOOB(code)](./node-client.baseapiclient.activateoob.md) |  |  |
|  [activateTOTP(otp)](./node-client.baseapiclient.activatetotp.md) |  |  |
|  [addLoginID(loginIDs)](./node-client.baseapiclient.addloginid.md) |  |  |
|  [authenticateWithBearerToken(bearerToken)](./node-client.baseapiclient.authenticatewithbearertoken.md) |  |  |
|  [authenticateWithOOB(options)](./node-client.baseapiclient.authenticatewithoob.md) |  |  |
|  [authenticateWithRecoveryCode(code)](./node-client.baseapiclient.authenticatewithrecoverycode.md) |  |  |
|  [authenticateWithTOTP(options)](./node-client.baseapiclient.authenticatewithtotp.md) |  |  |
|  [changePassword(newPassword, oldPassword)](./node-client.baseapiclient.changepassword.md) |  |  |
|  [createNewOOB(options)](./node-client.baseapiclient.createnewoob.md) |  |  |
|  [createNewTOTP(options)](./node-client.baseapiclient.createnewtotp.md) |  |  |
|  [del(path, options)](./node-client.baseapiclient.del.md) |  |  |
|  [deleteAuthenticator(id)](./node-client.baseapiclient.deleteauthenticator.md) |  |  |
|  [deleteOAuthProvider(providerID)](./node-client.baseapiclient.deleteoauthprovider.md) |  |  |
|  [fetch(input, init, options)](./node-client.baseapiclient.fetch.md) |  |  |
|  [get(path, options)](./node-client.baseapiclient.get.md) |  |  |
|  [getAuthenticators()](./node-client.baseapiclient.getauthenticators.md) |  |  |
|  [getOAuthResult(options)](./node-client.baseapiclient.getoauthresult.md) |  |  |
|  [getSession(id)](./node-client.baseapiclient.getsession.md) |  |  |
|  [linkOAuthProviderWithAccessToken(providerID, accessToken)](./node-client.baseapiclient.linkoauthproviderwithaccesstoken.md) |  |  |
|  [listIdentities()](./node-client.baseapiclient.listidentities.md) |  |  |
|  [listRecoveryCode()](./node-client.baseapiclient.listrecoverycode.md) |  |  |
|  [listSessions()](./node-client.baseapiclient.listsessions.md) |  |  |
|  [login(loginID, password, options)](./node-client.baseapiclient.login.md) |  |  |
|  [loginOAuthProviderWithAccessToken(providerID, accessToken, options)](./node-client.baseapiclient.loginoauthproviderwithaccesstoken.md) |  |  |
|  [loginWithCustomToken(token, options)](./node-client.baseapiclient.loginwithcustomtoken.md) |  |  |
|  [logout()](./node-client.baseapiclient.logout.md) |  |  |
|  [me()](./node-client.baseapiclient.me.md) |  |  |
|  [oauthAuthorizationURL(options)](./node-client.baseapiclient.oauthauthorizationurl.md) |  |  |
|  [oauthHandler(options)](./node-client.baseapiclient.oauthhandler.md) |  |  |
|  [post(path, options)](./node-client.baseapiclient.post.md) |  |  |
|  [postAndReturnAuthResponse(path, options)](./node-client.baseapiclient.postandreturnauthresponse.md) |  |  |
|  [prepareHeaders()](./node-client.baseapiclient.prepareheaders.md) |  |  |
|  [refresh(refreshToken)](./node-client.baseapiclient.refresh.md) |  |  |
|  [regenerateRecoveryCode()](./node-client.baseapiclient.regeneraterecoverycode.md) |  |  |
|  [removeLoginID(loginID)](./node-client.baseapiclient.removeloginid.md) |  |  |
|  [request(method, path, options)](./node-client.baseapiclient.request.md) |  |  |
|  [requestEmailVerification(email)](./node-client.baseapiclient.requestemailverification.md) |  |  |
|  [requestForgotPasswordEmail(email)](./node-client.baseapiclient.requestforgotpasswordemail.md) |  |  |
|  [requestPhoneVerification(phone)](./node-client.baseapiclient.requestphoneverification.md) |  |  |
|  [resetPassword(form)](./node-client.baseapiclient.resetpassword.md) |  |  |
|  [revokeAllBearerToken()](./node-client.baseapiclient.revokeallbearertoken.md) |  |  |
|  [revokeOtherSessions()](./node-client.baseapiclient.revokeothersessions.md) |  |  |
|  [revokeSession(id)](./node-client.baseapiclient.revokesession.md) |  |  |
|  [signup(loginIDs, password, options)](./node-client.baseapiclient.signup.md) |  |  |
|  [triggerOOB(authenticatorID)](./node-client.baseapiclient.triggeroob.md) |  |  |
|  [updateLoginID(oldLoginID, newLoginID)](./node-client.baseapiclient.updateloginid.md) |  |  |
|  [updateMetadata(metadata)](./node-client.baseapiclient.updatemetadata.md) |  |  |
|  [verifyWithCode(code)](./node-client.baseapiclient.verifywithcode.md) |  |  |

